side bar dcomplete

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-server": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/router": "^20.3.15",
     "@angular/ssr": "^20.3.9",
+    "@clerk/clerk-js": "^5.114.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
