--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.3.15",
     "@angular/ssr": "^20.3.9",
     "@clerk/clerk-js": "^5.114.0",
+    "@stripe/stripe-js": "^8.6.0",
     "express": "^5.1.0",
     "gsap": "^3.14.1",
     "rxjs": "~7.8.0",
